updated at: 2019-10-18 15:59, 三角コーンとマンホール【VRMアバター &amp; FBXの置物セット】 - プロメ亭 - BOOTH

--- a/VRChat/01/1278601.html
+++ b/VRChat/01/1278601.html
@@ -242,8 +242,8 @@
                                   <div class="cart-button-wrap">
                                     <a class=
                                     "btn add-cart full-length"
-                                    title="cone_f_mac.zip" href=
-                                    "https://booth.pm/downloadables/530650">
+                                    title="cone_f.zip" href=
+                                    "https://booth.pm/downloadables/758076">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -252,27 +252,7 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        cone_f_mac
-                                      </div>
-                                      <div>
-                                        .zip
-                                      </div>
-                                      <div>
-                                        &nbsp;(1.02 MB)
-                                      </div>
-                                    </div></a><a class=
-                                    "btn add-cart full-length"
-                                    title="cone_f_win.zip" href=
-                                    "https://booth.pm/downloadables/530651">
-                                    <div class="u-d-block">
-                                      <span class=
-                                      "cmd-label">無料ダウンロード</span>
-                                    </div>
-                                    <div class=
-                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
-                                      <div class=
-                                      "u-text-ellipsis u-max-w-50">
-                                        cone_f_win
+                                        cone_f
                                       </div>
                                       <div>
                                         .zip
