--- a/VRChat/67/1239867.html
+++ b/VRChat/67/1239867.html
@@ -80,7 +80,7 @@
         <div class="market-item-detail" data-product-brand=
         "monoxide" data-product-category="158" data-product-id=
         "1239867" data-product-list="market_show"
-        data-product-price="0" data-tracking="detail_item">
+        data-product-price="300" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -167,32 +167,48 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 0
+                                    ¥ 300
                                   </div>
                                 </div>
                                 <div class="variation-cart">
                                   <div class="cart-button-wrap">
-                                    <a class=
-                                    "btn add-cart full-length"
-                                    title="bathtowels.zip" href=
-                                    "https://booth.pm/downloadables/508539">
-                                    <div class="u-d-block">
-                                      <span class=
-                                      "cmd-label">無料ダウンロード</span>
-                                    </div>
-                                    <div class=
-                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
-                                      <div class=
-                                      "u-text-ellipsis u-max-w-50">
-                                        bathtowels
+                                    <form class="button_to" method=
+                                    "post" action=
+                                    "https://monoxide.booth.pm/cart?added_to_cart=true&amp;via=market">
+                                      <input type="hidden" name=
+                                      "_method" value=
+                                      "patch"><button class=
+                                      "btn add-cart full-length"
+                                      data-product-id="1239867"
+                                      data-product-price="300"
+                                      data-product-brand="monoxide"
+                                      data-product-category="158"
+                                      data-product-variant=
+                                      "1927639" data-tracking=
+                                      "add_item" data-product-list=
+                                      "from market_show via market to add_item"
+                                      type="submit"><input type=
+                                      "hidden" name=
+                                      "cart_item[variation_id]" id=
+                                      "cart_item_variation_id"
+                                      value="1927639"></button>
+                                      <div class="cmd-label">
+                                        <button class=
+                                        "btn add-cart full-length"
+                                        data-product-id="1239867"
+                                        data-product-price="300"
+                                        data-product-brand=
+                                        "monoxide"
+                                        data-product-category="158"
+                                        data-product-variant=
+                                        "1927639" data-tracking=
+                                        "add_item"
+                                        data-product-list=
+                                        "from market_show via market to add_item"
+                                        type=
+                                        "submit">カートに入れる</button>
                                       </div>
-                                      <div>
-                                        .zip
-                                      </div>
-                                      <div>
-                                        &nbsp;(31 MB)
-                                      </div>
-                                    </div></a>
+                                    </form>
                                   </div>
                                 </div>
                               </div>
@@ -285,8 +301,7 @@
                             使用時に、該当の形式に各自セットアップ・エクスポートしてください。
                             VRChat、MMDでの使用、カス子カスメのMOD、その他なんにでもどうぞ。
                             つくったひと：tosh@peach_carrot
-                            うぇぶさいと：http://monoxide.jp/ らいせんす：CC
-                            BY-SA
+                            うぇぶさいと：http://monoxide.jp/
                           </p>
                         </div>
                       </section>
