updated at: 2019-10-18 17:46, カントリードレス4種類【VRoid用衣装】 - プロメ亭 - BOOTH

--- a/VRChat/46/1237146.html
+++ b/VRChat/46/1237146.html
@@ -227,7 +227,7 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      モノクロバージョン
+                                      無料モノクロバージョン
                                     </div>
                                     <div class=
                                     "variation-caption variation-caption--type">
@@ -243,8 +243,8 @@
                                   <div class="cart-button-wrap">
                                     <a class=
                                     "btn add-cart full-length"
-                                    title="country_mac_f.zip" href=
-                                    "https://booth.pm/downloadables/507580">
+                                    title="country_f.zip" href=
+                                    "https://booth.pm/downloadables/757427">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -253,27 +253,7 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        country_mac_f
-                                      </div>
-                                      <div>
-                                        .zip
-                                      </div>
-                                      <div>
-                                        &nbsp;(814 KB)
-                                      </div>
-                                    </div></a><a class=
-                                    "btn add-cart full-length"
-                                    title="country_win_f.zip" href=
-                                    "https://booth.pm/downloadables/507581">
-                                    <div class="u-d-block">
-                                      <span class=
-                                      "cmd-label">無料ダウンロード</span>
-                                    </div>
-                                    <div class=
-                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
-                                      <div class=
-                                      "u-text-ellipsis u-max-w-50">
-                                        country_win_f
+                                        country_f
                                       </div>
                                       <div>
                                         .zip
