updated at: 2019-10-18 17:49, 3Dデータ/ファンタジー武器/殴9種 - monoxide.jp/booth - BOOTH

--- a/VRChat/42/1236142.html
+++ b/VRChat/42/1236142.html
@@ -6,7 +6,7 @@
       3Dデータ/ファンタジー武器/殴9種 - monoxide.jp/booth - BOOTH
     </title>
     <meta name="description" content=
-    "作った3D小物、ファンタジー系武器9種の3Dデータです。 なかみはローポリの.blendファイル＋unitypackage。 今回は汗のにおい漂う殴・打属性系の武器9種類、 フレイル、ウォーハンマー、ウォーピック、バトルアクス バルディッシュ、ラブリュス2種、ストーンハンマー、棍棒 です。 使用時に、該当の形式に各自セットアップ・エクスポートしてください。 VRChat、MMDでの使用、カス子カスメのMOD、その他なんにでもどうぞ。 つくったひと：tosh@peach_carrot うぇぶさいと：http://monoxide.jp/ らいせんす：CC BY-SA">
+    "作った3D小物、ファンタジー系武器9種の3Dデータです。 なかみはローポリの.blendファイル＋unitypackage。 今回は汗のにおい漂う殴・打属性系の武器9種類、 フレイル、ウォーハンマー、ウォーピック、バトルアクス バルディッシュ、ラブリュス2種、ストーンハンマー、棍棒 です。 使用時に、該当の形式に各自セットアップ・エクスポートしてください。 VRChat、MMDでの使用、カス子カスメのMOD、その他なんにでもどうぞ。 つくったひと：tosh@peach_carrot うぇぶさいと：http://monoxide.jp/">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1236142">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "3Dデータ/ファンタジー武器/殴9種 - monoxide.jp/booth - BOOTH">
     <meta name="twitter:description" content=
-    "作った3D小物、ファンタジー系武器9種の3Dデータです。 なかみはローポリの.blendファイル＋unitypackage。 今回は汗のにおい漂う殴・打属性系の武器9種類、 フレイル、ウォーハンマー、ウォーピック、バトルアクス バルディッシュ、ラブリュス2種、ストーンハンマー、棍棒 です。 使用時に、該当の形式に各自セットアップ・エクスポートしてください。 VRChat、MMDでの使用、カス子カスメのMOD、その他なんにでもどうぞ。 つくったひと：tosh@peach_carrot うぇぶさいと：http://monoxide.jp/ らいせんす：CC BY-SA">
+    "作った3D小物、ファンタジー系武器9種の3Dデータです。 なかみはローポリの.blendファイル＋unitypackage。 今回は汗のにおい漂う殴・打属性系の武器9種類、 フレイル、ウォーハンマー、ウォーピック、バトルアクス バルディッシュ、ラブリュス2種、ストーンハンマー、棍棒 です。 使用時に、該当の形式に各自セットアップ・エクスポートしてください。 VRChat、MMDでの使用、カス子カスメのMOD、その他なんにでもどうぞ。 つくったひと：tosh@peach_carrot うぇぶさいと：http://monoxide.jp/">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/1460ea03-138d-4111-a593-ed63e53cae58/i/1236142/3c7da24e-3978-43b1-b37b-6880d3af39a4_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "3Dデータ/ファンタジー武器/殴9種 - monoxide.jp/booth - BOOTH">
     <meta property="og:description" content=
-    "作った3D小物、ファンタジー系武器9種の3Dデータです。 なかみはローポリの.blendファイル＋unitypackage。 今回は汗のにおい漂う殴・打属性系の武器9種類、 フレイル、ウォーハンマー、ウォーピック、バトルアクス バルディッシュ、ラブリュス2種、ストーンハンマー、棍棒 です。 使用時に、該当の形式に各自セットアップ・エクスポートしてください。 VRChat、MMDでの使用、カス子カスメのMOD、その他なんにでもどうぞ。 つくったひと：tosh@peach_carrot うぇぶさいと：http://monoxide.jp/ らいせんす：CC BY-SA">
+    "作った3D小物、ファンタジー系武器9種の3Dデータです。 なかみはローポリの.blendファイル＋unitypackage。 今回は汗のにおい漂う殴・打属性系の武器9種類、 フレイル、ウォーハンマー、ウォーピック、バトルアクス バルディッシュ、ラブリュス2種、ストーンハンマー、棍棒 です。 使用時に、該当の形式に各自セットアップ・エクスポートしてください。 VRChat、MMDでの使用、カス子カスメのMOD、その他なんにでもどうぞ。 つくったひと：tosh@peach_carrot うぇぶさいと：http://monoxide.jp/">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/1460ea03-138d-4111-a593-ed63e53cae58/i/1236142/3c7da24e-3978-43b1-b37b-6880d3af39a4_base_resized.jpg">
     <meta property="og:url" content=
@@ -80,7 +80,7 @@
         <div class="market-item-detail" data-product-brand=
         "monoxide" data-product-category="127" data-product-id=
         "1236142" data-product-list="market_show"
-        data-product-price="0" data-tracking="detail_item">
+        data-product-price="300" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -168,34 +168,48 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 0
+                                    ¥ 300
                                   </div>
                                 </div>
                                 <div class="variation-cart">
                                   <div class="cart-button-wrap">
-                                    <a class=
-                                    "btn add-cart full-length"
-                                    title=
-                                    "weapons_axes_and_hammers_2.zip"
-                                    href=
-                                    "https://booth.pm/downloadables/507245">
-                                    <div class="u-d-block">
-                                      <span class=
-                                      "cmd-label">無料ダウンロード</span>
-                                    </div>
-                                    <div class=
-                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
-                                      <div class=
-                                      "u-text-ellipsis u-max-w-50">
-                                        weapons_axes_and_hammers_2
+                                    <form class="button_to" method=
+                                    "post" action=
+                                    "https://monoxide.booth.pm/cart?added_to_cart=true&amp;via=market">
+                                      <input type="hidden" name=
+                                      "_method" value=
+                                      "patch"><button class=
+                                      "btn add-cart full-length"
+                                      data-product-id="1236142"
+                                      data-product-price="300"
+                                      data-product-brand="monoxide"
+                                      data-product-category="127"
+                                      data-product-variant=
+                                      "1921336" data-tracking=
+                                      "add_item" data-product-list=
+                                      "from market_show via market to add_item"
+                                      type="submit"><input type=
+                                      "hidden" name=
+                                      "cart_item[variation_id]" id=
+                                      "cart_item_variation_id"
+                                      value="1921336"></button>
+                                      <div class="cmd-label">
+                                        <button class=
+                                        "btn add-cart full-length"
+                                        data-product-id="1236142"
+                                        data-product-price="300"
+                                        data-product-brand=
+                                        "monoxide"
+                                        data-product-category="127"
+                                        data-product-variant=
+                                        "1921336" data-tracking=
+                                        "add_item"
+                                        data-product-list=
+                                        "from market_show via market to add_item"
+                                        type=
+                                        "submit">カートに入れる</button>
                                       </div>
-                                      <div>
-                                        .zip
-                                      </div>
-                                      <div>
-                                        &nbsp;(244 MB)
-                                      </div>
-                                    </div></a>
+                                    </form>
                                   </div>
                                 </div>
                               </div>
@@ -362,8 +376,7 @@
                             使用時に、該当の形式に各自セットアップ・エクスポートしてください。
                             VRChat、MMDでの使用、カス子カスメのMOD、その他なんにでもどうぞ。
                             つくったひと：tosh@peach_carrot
-                            うぇぶさいと：http://monoxide.jp/ らいせんす：CC
-                            BY-SA
+                            うぇぶさいと：http://monoxide.jp/
                           </p>
                         </div>
                       </section>
