updated at: 2019-10-18 22:27, VRC対応アバター「ナナナ/ネコシロ」 - 潮だまり - BOOTH

--- a/VRChat/27/1067527.html
+++ b/VRChat/27/1067527.html
@@ -537,6 +537,15 @@
                             "https://booth.pximg.net/55d0b3cd-8d44-43f0-8467-7e99fcc0d318/i/1067527/b1251727-b8ff-4e17-bda6-b1f1ab906263_base_resized.jpg">
                           </div>
                         </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="VRC対応アバター「ナナナ/ネコシロ」" class=
+                            "market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/55d0b3cd-8d44-43f0-8467-7e99fcc0d318/i/1067527/e7250c4e-d21f-453d-a717-b33ca634dc23_base_resized.jpg">
+                          </div>
+                        </div>
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
@@ -579,6 +588,10 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/55d0b3cd-8d44-43f0-8467-7e99fcc0d318/i/1067527/b1251727-b8ff-4e17-bda6-b1f1ab906263_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/55d0b3cd-8d44-43f0-8467-7e99fcc0d318/i/1067527/e7250c4e-d21f-453d-a717-b33ca634dc23_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
