--- a/VRChat/69/1299569.html
+++ b/VRChat/69/1299569.html
@@ -242,8 +242,8 @@
                                   <div class="cart-button-wrap">
                                     <a class=
                                     "btn add-cart full-length"
-                                    title="Saturn_mac_f.zip" href=
-                                    "https://booth.pm/downloadables/539875">
+                                    title="Saturn_f.zip" href=
+                                    "https://booth.pm/downloadables/758082">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -252,27 +252,7 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        Saturn_mac_f
-                                      </div>
-                                      <div>
-                                        .zip
-                                      </div>
-                                      <div>
-                                        &nbsp;(1.12 MB)
-                                      </div>
-                                    </div></a><a class=
-                                    "btn add-cart full-length"
-                                    title="Saturn_win_f.zip" href=
-                                    "https://booth.pm/downloadables/539876">
-                                    <div class="u-d-block">
-                                      <span class=
-                                      "cmd-label">無料ダウンロード</span>
-                                    </div>
-                                    <div class=
-                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
-                                      <div class=
-                                      "u-text-ellipsis u-max-w-50">
-                                        Saturn_win_f
+                                        Saturn_f
                                       </div>
                                       <div>
                                         .zip
