updated at: 2019-10-20 00:06, VRChatModeSwitcher (旧VRChat Launcher) - あいらのショップ - BOOTH

--- a/VRChat/19/1337219.html
+++ b/VRChat/19/1337219.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>
-      VRChat Launcher - あいらのショップ - BOOTH
+      VRChatModeSwitcher (旧VRChat Launcher) - あいらのショップ - BOOTH
     </title>
     <meta name="description" content=
-    "・コレは何？ VRChatのホームページやURL経由でVRChatのインスタンスにJoinするとき、VR HMDが接続されているとVRモードで起動してしまいます。 本プログラムはVR HMDが接続されていてもデスクトップモードで起動するかVRモードで起動するか選べるようにするためのプログラムです。 ・使い方 同梱してある「ReadMe　最初に読んでください」を読んでください。 OS : Windows 7 SP1以降 使用ライブラリ : .NET Framework 4.6.1 変更履歴 2019/04/29 - Ver1.0.1配布 ローカルテスト時の複数起動機能追加 2019/04/29">
+    "・コレは何？ VRChatのホームページやURL経由でVRChatのインスタンスにJoinするとき、VR HMDが接続されているとVRモードで起動してしまいます。 本プログラムはVR HMDが接続されていてもデスクトップモードで起動するかVRモードで起動するか選べるようにするためのプログラムです。 ・使い方 同梱してある「ReadMe　最初に読んでください」を読んでください。 OS : Windows 7 SP1以降 使用ライブラリ : .NET Framework 4.7.2 変更履歴 2019/10/19 - １から作り直し機能の変更なし 　　　　　　　アプリ名変更 Ver1.0へ">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1337219">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "VRChat Launcher - あいらのショップ - BOOTH">
+    "VRChatModeSwitcher (旧VRChat Launcher) - あいらのショップ - BOOTH">
     <meta name="twitter:description" content=
-    "・コレは何？ VRChatのホームページやURL経由でVRChatのインスタンスにJoinするとき、VR HMDが接続されているとVRモードで起動してしまいます。 本プログラムはVR HMDが接続されていてもデスクトップモードで起動するかVRモードで起動するか選べるようにするためのプログラムです。 ・使い方 同梱してある「ReadMe　最初に読んでください」を読んでください。 OS : Windows 7 SP1以降 使用ライブラリ : .NET Framework 4.6.1 変更履歴 2019/04/29 - Ver1.0.1配布 ローカルテスト時の複数起動機能追加 2019/04/29">
+    "・コレは何？ VRChatのホームページやURL経由でVRChatのインスタンスにJoinするとき、VR HMDが接続されているとVRモードで起動してしまいます。 本プログラムはVR HMDが接続されていてもデスクトップモードで起動するかVRモードで起動するか選べるようにするためのプログラムです。 ・使い方 同梱してある「ReadMe　最初に読んでください」を読んでください。 OS : Windows 7 SP1以降 使用ライブラリ : .NET Framework 4.7.2 変更履歴 2019/10/19 - １から作り直し機能の変更なし 　　　　　　　アプリ名変更 Ver1.0へ">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/c5555578-9638-4b85-b4f7-68c32f2dcc57/i/1337219/91f9f8cd-e8a9-4d50-8e17-6171e2662247_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "VRChat Launcher - あいらのショップ - BOOTH">
+    "VRChatModeSwitcher (旧VRChat Launcher) - あいらのショップ - BOOTH">
     <meta property="og:description" content=
-    "・コレは何？ VRChatのホームページやURL経由でVRChatのインスタンスにJoinするとき、VR HMDが接続されているとVRモードで起動してしまいます。 本プログラムはVR HMDが接続されていてもデスクトップモードで起動するかVRモードで起動するか選べるようにするためのプログラムです。 ・使い方 同梱してある「ReadMe　最初に読んでください」を読んでください。 OS : Windows 7 SP1以降 使用ライブラリ : .NET Framework 4.6.1 変更履歴 2019/04/29 - Ver1.0.1配布 ローカルテスト時の複数起動機能追加 2019/04/29">
+    "・コレは何？ VRChatのホームページやURL経由でVRChatのインスタンスにJoinするとき、VR HMDが接続されているとVRモードで起動してしまいます。 本プログラムはVR HMDが接続されていてもデスクトップモードで起動するかVRモードで起動するか選べるようにするためのプログラムです。 ・使い方 同梱してある「ReadMe　最初に読んでください」を読んでください。 OS : Windows 7 SP1以降 使用ライブラリ : .NET Framework 4.7.2 変更履歴 2019/10/19 - １から作り直し機能の変更なし 　　　　　　　アプリ名変更 Ver1.0へ">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/c5555578-9638-4b85-b4f7-68c32f2dcc57/i/1337219/91f9f8cd-e8a9-4d50-8e17-6171e2662247_base_resized.jpg">
     <meta property="og:url" content=
@@ -132,7 +132,7 @@
                           </div></a>
                         </div>
                         <h2 class="item-summary__item-name">
-                          VRChat Launcher
+                          VRChatModeSwitcher (旧VRChat Launcher)
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -179,9 +179,10 @@
                                   <div class="cart-button-wrap">
                                     <a class=
                                     "btn add-cart full-length"
-                                    title="VRCLauncher1.0.1.zip"
+                                    title=
+                                    "VRChatModeSwitcher1.0.zip"
                                     href=
-                                    "https://booth.pm/downloadables/572271">
+                                    "https://booth.pm/downloadables/758731">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -190,13 +191,13 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        VRCLauncher1.0.1
+                                        VRChatModeSwitcher1.0
                                       </div>
                                       <div>
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(18.3 KB)
+                                        &nbsp;(3.06 MB)
                                       </div>
                                     </div></a>
                                   </div>
@@ -276,7 +277,8 @@
                             <a data-url=
                             "https://booth.pm/ja/items/1337219"
                             data-lang="ja" data-hashtags="booth_pm"
-                            data-text="VRChat Launcher | あいらのショップ"
+                            data-text=
+                            "VRChatModeSwitcher (旧VRChat Launcher) | あいらのショップ"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
@@ -296,16 +298,19 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="VRChat Launcher" class=
-                            "market-item-detail-item-image" src=
+                            <img alt=
+                            "VRChatModeSwitcher (旧VRChat Launcher)"
+                            class="market-item-detail-item-image"
+                            src=
                             "https://booth.pximg.net/c5555578-9638-4b85-b4f7-68c32f2dcc57/i/1337219/91f9f8cd-e8a9-4d50-8e17-6171e2662247_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="VRChat Launcher" class=
-                            "market-item-detail-item-image"
+                            <img alt=
+                            "VRChatModeSwitcher (旧VRChat Launcher)"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/c5555578-9638-4b85-b4f7-68c32f2dcc57/i/1337219/b62806f4-cc5e-4ce9-8e1b-a5322b6cc040_base_resized.jpg">
                           </div>
@@ -326,7 +331,8 @@
                         <div class=
                         "market-item-detail-description">
                           <h1 class="subhead">
-                            VRChat Launcher 紹介文
+                            VRChatModeSwitcher (旧VRChat Launcher)
+                            紹介文
                           </h1>
                           <p class="autolink">
                             ・コレは何？
@@ -335,9 +341,11 @@
                             HMDが接続されていてもデスクトップモードで起動するかVRモードで起動するか選べるようにするためのプログラムです。
                             ・使い方 同梱してある「ReadMe　最初に読んでください」を読んでください。
                             OS : Windows 7 SP1以降 使用ライブラリ : .NET
-                            Framework 4.6.1 変更履歴 2019/04/29 -
-                            Ver1.0.1配布 ローカルテスト時の複数起動機能追加 2019/04/29
-                            - Ver1.0配布
+                            Framework 4.7.2 変更履歴 2019/10/19 -
+                            １から作り直し機能の変更なし 　　　　　　　アプリ名変更 Ver1.0へ
+                            　　　　　　　使用ライブラリのバージョンを4.7.2に 2019/04/29
+                            - Ver1.0.1配布 ローカルテスト時の複数起動機能追加
+                            2019/04/29 - Ver1.0配布
                           </p>
                         </div>
                       </section>
