updated at: 2019-10-20 17:33, vrchatアバター「Helene」（ヘレネ） - 双葉ふぁみりあ - BOOTH

--- a/VRChat/61/1332961.html
+++ b/VRChat/61/1332961.html
@@ -81,7 +81,7 @@
         <div class="market-item-detail" data-product-brand=
         "hutaba-nao" data-product-category="127" data-product-id=
         "1332961" data-product-list="market_show"
-        data-product-price="3000" data-tracking="detail_item">
+        data-product-price="0" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -169,49 +169,52 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 3,000
+                                    ¥ 0
                                   </div>
                                 </div>
                                 <div class="variation-cart">
                                   <div class="cart-button-wrap">
-                                    <form class="button_to" method=
-                                    "post" action=
-                                    "https://hutaba-nao.booth.pm/cart?added_to_cart=true&amp;via=market">
-                                      <input type="hidden" name=
-                                      "_method" value=
-                                      "patch"><button class=
-                                      "btn add-cart full-length"
-                                      data-product-id="1332961"
-                                      data-product-price="3000"
-                                      data-product-brand=
-                                      "hutaba-nao"
-                                      data-product-category="127"
-                                      data-product-variant=
-                                      "2079161" data-tracking=
-                                      "add_item" data-product-list=
-                                      "from market_show via market to add_item"
-                                      type="submit"><input type=
-                                      "hidden" name=
-                                      "cart_item[variation_id]" id=
-                                      "cart_item_variation_id"
-                                      value="2079161"></button>
-                                      <div class="cmd-label">
-                                        <button class=
-                                        "btn add-cart full-length"
-                                        data-product-id="1332961"
-                                        data-product-price="3000"
-                                        data-product-brand=
-                                        "hutaba-nao"
-                                        data-product-category="127"
-                                        data-product-variant=
-                                        "2079161" data-tracking=
-                                        "add_item"
-                                        data-product-list=
-                                        "from market_show via market to add_item"
-                                        type=
-                                        "submit">カートに入れる</button>
+                                    <a class=
+                                    "btn add-cart full-length"
+                                    title="helene_けもみみ付き_.zip"
+                                    href="https://booth.pm/downloadables/568297">
+                                    <div class="u-d-block">
+                                      <span class=
+                                      "cmd-label">無料ダウンロード</span>
+                                    </div>
+                                    <div class=
+                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
+                                      <div class=
+                                      "u-text-ellipsis u-max-w-50">
+                                        helene_けもみみ付き_
                                       </div>
-                                    </form>
+                                      <div>
+                                        .zip
+                                      </div>
+                                      <div>
+                                        &nbsp;(177 MB)
+                                      </div>
+                                    </div></a><a class=
+                                    "btn add-cart full-length"
+                                    title="Helene_VRM.zip" href=
+                                    "https://booth.pm/downloadables/580644">
+                                    <div class="u-d-block">
+                                      <span class=
+                                      "cmd-label">無料ダウンロード</span>
+                                    </div>
+                                    <div class=
+                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
+                                      <div class=
+                                      "u-text-ellipsis u-max-w-50">
+                                        Helene_VRM
+                                      </div>
+                                      <div>
+                                        .zip
+                                      </div>
+                                      <div>
+                                        &nbsp;(15.5 MB)
+                                      </div>
+                                    </div></a>
                                   </div>
                                 </div>
                               </div>
