updated at: 2019-10-20 17:45, オリジナル3Dモデル『SCARECROW -スケアクロウ-』 - 四拾弐重工販売所 - BOOTH

--- a/VRChat/41/1368541.html
+++ b/VRChat/41/1368541.html
@@ -17,14 +17,14 @@
     <meta name="twitter:description" content=
     "販売用人型3Dモデル第四弾　 量産型汎用義体 &quot;SCARECROW -スケアクロウ-&quot; 昼は陰陽師、夜は忍の男性型(青年)です。 ヘルスゴス衣装版も追加しました。 VRCアバターやゲーム等にご利用ください。 〇内容 ・本体モデル ・マテリアル+シェーダ ・追加衣装版モデル 〇フルボディトラッキング対応 〇アイトラッキング対応 〇リップシンク対応 〇ポリゴン数 48128 〇DynamicBone及びVRCSDK設定済み">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/561f4f1a-313a-4d21-88ff-db7b28a4429e_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/516aa293-f05d-40d2-85aa-429e5dbd1bd2_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "オリジナル3Dモデル『SCARECROW -スケアクロウ-』 - 四拾弐重工販売所 - BOOTH">
     <meta property="og:description" content=
     "販売用人型3Dモデル第四弾　 量産型汎用義体 &quot;SCARECROW -スケアクロウ-&quot; 昼は陰陽師、夜は忍の男性型(青年)です。 ヘルスゴス衣装版も追加しました。 VRCアバターやゲーム等にご利用ください。 〇内容 ・本体モデル ・マテリアル+シェーダ ・追加衣装版モデル 〇フルボディトラッキング対応 〇アイトラッキング対応 〇リップシンク対応 〇ポリゴン数 48128 〇DynamicBone及びVRCSDK設定済み">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/561f4f1a-313a-4d21-88ff-db7b28a4429e_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/516aa293-f05d-40d2-85aa-429e5dbd1bd2_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1368541">
     <meta name="skip_auto_login" content="">
@@ -247,7 +247,7 @@
                             <img alt=
                             "オリジナル3Dモデル『SCARECROW -スケアクロウ-』" class=
                             "market-item-detail-item-image" src=
-                            "https://booth.pximg.net/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/561f4f1a-313a-4d21-88ff-db7b28a4429e_base_resized.jpg">
+                            "https://booth.pximg.net/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/516aa293-f05d-40d2-85aa-429e5dbd1bd2_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -257,7 +257,7 @@
                             "オリジナル3Dモデル『SCARECROW -スケアクロウ-』" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/69e898ca-7dea-4477-8789-e50d4055f914_base_resized.jpg">
+                            "https://booth.pximg.net/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/561f4f1a-313a-4d21-88ff-db7b28a4429e_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -287,6 +287,16 @@
                             "オリジナル3Dモデル『SCARECROW -スケアクロウ-』" class=
                             "market-item-detail-item-image"
                             data-lazy=
+                            "https://booth.pximg.net/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/69e898ca-7dea-4477-8789-e50d4055f914_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt=
+                            "オリジナル3Dモデル『SCARECROW -スケアクロウ-』" class=
+                            "market-item-detail-item-image"
+                            data-lazy=
                             "https://booth.pximg.net/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/9bb0be76-136c-4f34-882f-47af60cea68f_base_resized.jpg">
                           </div>
                         </div>
@@ -305,11 +315,11 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/561f4f1a-313a-4d21-88ff-db7b28a4429e_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/516aa293-f05d-40d2-85aa-429e5dbd1bd2_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/69e898ca-7dea-4477-8789-e50d4055f914_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/561f4f1a-313a-4d21-88ff-db7b28a4429e_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
@@ -318,6 +328,10 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/c29c8c5f-03ba-4a17-8143-280041c50c27_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/69e898ca-7dea-4477-8789-e50d4055f914_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
